--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1",
+    "react-router": "^4.0.0-alpha.0",
     "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
