--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "convert-units": "^1.2.0",
+    "convert-units": "NathanielScottStevens/convert-units#to-best",
+    "decimal.js": "^6.0.0",
     "fractions": "^1.0.2",
     "material-ui": "^0.15.4",
     "meteor-node-stubs": "~0.2.0",
