Adds tests for complex recipes.

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     },
     "globals": {
       "Meteor": false,
-      "Factory": false
+      "Factory": false,
+      "Fake": false
     }
   }
 }
