--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "convert-units": "NathanielScottStevens/convert-units#to-best",
+    "convert-units": "git://github.com/nathanielscottstevens/convert-units",
     "decimal.js": "^6.0.0",
     "fractions": "^1.0.2",
     "material-ui": "^0.15.4",
