--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "convert-units": "git://github.com/nathanielscottstevens/convert-units",
     "decimal.js": "^6.0.0",
     "fractions": "^1.0.2",
-    "material-ui": "^0.15.4",
-    "meteor-node-stubs": "~0.2.0",
+    "material-ui": "^0.16.6",
+    "meteor-node-stubs": "^0.2.0",
     "react": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-router": "^4.0.0-alpha.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^2.0.0"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.0.0",
