--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
   },
   "dependencies": {
     "convert-units": "git://github.com/nathanielscottstevens/convert-units",
-    "decimal.js": "^6.0.0",
-    "fractions": "^1.0.2",
-    "material-ui": "^0.16.6",
-    "meteor-node-stubs": "^0.2.0",
-    "react": "^15.3.1",
-    "react-addons-pure-render-mixin": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router": "^4.0.0-alpha.0",
-    "react-tap-event-plugin": "^2.0.0"
+    "decimal.js": "6.0.0",
+    "fractions": "1.0.2",
+    "material-ui": "0.16.7",
+    "meteor-node-stubs": "0.2.0",
+    "react": "15.4.2",
+    "react-addons-pure-render-mixin": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-dropzone": "3.9.0",
+    "react-router": "4.0.0-alpha.3",
+    "react-tap-event-plugin": "2.0.1"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.0.0",
-    "babel-eslint": "^6.1.2",
-    "css-loader": "^0.24.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-import-resolver-meteor": "^0.3.3",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.1",
-    "eslint-plugin-meteor": "^4.0.0",
-    "eslint-plugin-react": "^6.2.0",
-    "node-sass": "^3.8.0",
-    "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.3.1",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1"
+    "@kadira/storybook": "2.0.0",
+    "babel-eslint": "6.1.2",
+    "css-loader": "0.24.0",
+    "enzyme": "2.7.0",
+    "eslint": "3.13.1",
+    "eslint-config-airbnb": "14.0.0",
+    "eslint-import-resolver-meteor": "0.3.4",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-meteor": "4.0.1",
+    "eslint-plugin-react": "6.9.0",
+    "node-sass": "3.8.0",
+    "raw-loader": "0.5.1",
+    "react-addons-test-utils": "15.4.2",
+    "sass-loader": "4.0.0",
+    "style-loader": "0.13.1"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
